src/Parser/PropCalc.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Parser/PropCalc.y
-----------------------------------------------------------------------------

state 68 contains 1 reduce/reduce conflicts.

rule 13 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Prop                              (0)
	Prop -> 'PropVar' '(' FOLExpr ')'                  (1)
	Prop -> 'Not' '(' Prop ')'                         (2)
	Prop -> 'And' '(' Prop ')' '(' Prop ')'            (3)
	Prop -> 'Or' '(' Prop ')' '(' Prop ')'             (4)
	Prop -> 'Imp' '(' Prop ')' '(' Prop ')'            (5)
	Prop -> '(' Prop ')'                               (6)
	FOLExpr -> 'Eq' '(' Exp ')' '(' Exp ')'            (7)
	FOLExpr -> 'ForAll' id '(' Prop ')'                (8)
	FOLExpr -> 'Exists' id '(' Prop ')'                (9)
	Exp -> 'Var' id                                    (10)
	Exp -> 'Z'                                         (11)
	Exp -> 'S' Exp                                     (12)
	Exp -> 'S' '(' Exp ')'                             (13)
	Exp -> 'Plus' '(' Exp ')' '(' Exp ')'              (14)
	Exp -> 'Mult' '(' Exp ')' '(' Exp ')'              (15)
	Exp -> '(' Exp ')'                                 (16)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { Token _ (TIdent $$) }
	'Var'          { Token _ TVar }
	'Z'            { Token _ TZero }
	'S'            { Token _ TSucc }
	'Plus'         { Token _ TPlus }
	'Mult'         { Token _ TMult }
	'PropVar'      { Token _ TPropVar }
	'Not'          { Token _ TNot }
	'And'          { Token _ TAnd }
	'Or'           { Token _ TOr }
	'Imp'          { Token _ TImp }
	'Eq'           { Token _ TEq }
	'ForAll'       { Token _ TForAll }
	'Exists'       { Token _ TExists }
	'('            { Token _ TLParen }
	')'            { Token _ TRParen }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Prop            rules 1, 2, 3, 4, 5, 6
	FOLExpr         rules 7, 8, 9
	Exp             rules 10, 11, 12, 13, 14, 15, 16

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 3

State 1


	'PropVar'      shift, and enter state 2


State 2

	Prop -> 'PropVar' . '(' FOLExpr ')'                 (rule 1)

	'('            shift, and enter state 14


State 3

	%start_parser -> Prop .                             (rule 0)

	%eof           accept


State 4

	Prop -> 'Not' . '(' Prop ')'                        (rule 2)

	'('            shift, and enter state 13


State 5

	Prop -> 'And' . '(' Prop ')' '(' Prop ')'           (rule 3)

	'('            shift, and enter state 12


State 6

	Prop -> 'Or' . '(' Prop ')' '(' Prop ')'            (rule 4)

	'('            shift, and enter state 11


State 7

	Prop -> 'Imp' . '(' Prop ')' '(' Prop ')'           (rule 5)

	'('            shift, and enter state 10


State 8

	Prop -> '(' . Prop ')'                              (rule 6)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 9

State 9

	Prop -> '(' Prop . ')'                              (rule 6)

	')'            shift, and enter state 23


State 10

	Prop -> 'Imp' '(' . Prop ')' '(' Prop ')'           (rule 5)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 22

State 11

	Prop -> 'Or' '(' . Prop ')' '(' Prop ')'            (rule 4)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 21

State 12

	Prop -> 'And' '(' . Prop ')' '(' Prop ')'           (rule 3)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 20

State 13

	Prop -> 'Not' '(' . Prop ')'                        (rule 2)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 19

State 14

	Prop -> 'PropVar' '(' . FOLExpr ')'                 (rule 1)

	'Eq'           shift, and enter state 16
	'ForAll'       shift, and enter state 17
	'Exists'       shift, and enter state 18

	FOLExpr        goto state 15

State 15

	Prop -> 'PropVar' '(' FOLExpr . ')'                 (rule 1)

	')'            shift, and enter state 31


State 16

	FOLExpr -> 'Eq' . '(' Exp ')' '(' Exp ')'           (rule 7)

	'('            shift, and enter state 30


State 17

	FOLExpr -> 'ForAll' . id '(' Prop ')'               (rule 8)

	id             shift, and enter state 29


State 18

	FOLExpr -> 'Exists' . id '(' Prop ')'               (rule 9)

	id             shift, and enter state 28


State 19

	Prop -> 'Not' '(' Prop . ')'                        (rule 2)

	')'            shift, and enter state 27


State 20

	Prop -> 'And' '(' Prop . ')' '(' Prop ')'           (rule 3)

	')'            shift, and enter state 26


State 21

	Prop -> 'Or' '(' Prop . ')' '(' Prop ')'            (rule 4)

	')'            shift, and enter state 25


State 22

	Prop -> 'Imp' '(' Prop . ')' '(' Prop ')'           (rule 5)

	')'            shift, and enter state 24


State 23

	Prop -> '(' Prop ')' .                              (rule 6)

	')'            reduce using rule 6
	%eof           reduce using rule 6


State 24

	Prop -> 'Imp' '(' Prop ')' . '(' Prop ')'           (rule 5)

	'('            shift, and enter state 43


State 25

	Prop -> 'Or' '(' Prop ')' . '(' Prop ')'            (rule 4)

	'('            shift, and enter state 42


State 26

	Prop -> 'And' '(' Prop ')' . '(' Prop ')'           (rule 3)

	'('            shift, and enter state 41


State 27

	Prop -> 'Not' '(' Prop ')' .                        (rule 2)

	')'            reduce using rule 2
	%eof           reduce using rule 2


State 28

	FOLExpr -> 'Exists' id . '(' Prop ')'               (rule 9)

	'('            shift, and enter state 40


State 29

	FOLExpr -> 'ForAll' id . '(' Prop ')'               (rule 8)

	'('            shift, and enter state 39


State 30

	FOLExpr -> 'Eq' '(' . Exp ')' '(' Exp ')'           (rule 7)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 32

State 31

	Prop -> 'PropVar' '(' FOLExpr ')' .                 (rule 1)

	')'            reduce using rule 1
	%eof           reduce using rule 1


State 32

	FOLExpr -> 'Eq' '(' Exp . ')' '(' Exp ')'           (rule 7)

	')'            shift, and enter state 55


State 33

	Exp -> 'Var' . id                                   (rule 10)

	id             shift, and enter state 54


State 34

	Exp -> 'Z' .                                        (rule 11)

	')'            reduce using rule 11


State 35

	Exp -> 'S' . Exp                                    (rule 12)
	Exp -> 'S' . '(' Exp ')'                            (rule 13)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 53

	Exp            goto state 52

State 36

	Exp -> 'Plus' . '(' Exp ')' '(' Exp ')'             (rule 14)

	'('            shift, and enter state 51


State 37

	Exp -> 'Mult' . '(' Exp ')' '(' Exp ')'             (rule 15)

	'('            shift, and enter state 50


State 38

	Exp -> '(' . Exp ')'                                (rule 16)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 49

State 39

	FOLExpr -> 'ForAll' id '(' . Prop ')'               (rule 8)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 48

State 40

	FOLExpr -> 'Exists' id '(' . Prop ')'               (rule 9)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 47

State 41

	Prop -> 'And' '(' Prop ')' '(' . Prop ')'           (rule 3)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 46

State 42

	Prop -> 'Or' '(' Prop ')' '(' . Prop ')'            (rule 4)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 45

State 43

	Prop -> 'Imp' '(' Prop ')' '(' . Prop ')'           (rule 5)

	'PropVar'      shift, and enter state 2
	'Not'          shift, and enter state 4
	'And'          shift, and enter state 5
	'Or'           shift, and enter state 6
	'Imp'          shift, and enter state 7
	'('            shift, and enter state 8

	Prop           goto state 44

State 44

	Prop -> 'Imp' '(' Prop ')' '(' Prop . ')'           (rule 5)

	')'            shift, and enter state 65


State 45

	Prop -> 'Or' '(' Prop ')' '(' Prop . ')'            (rule 4)

	')'            shift, and enter state 64


State 46

	Prop -> 'And' '(' Prop ')' '(' Prop . ')'           (rule 3)

	')'            shift, and enter state 63


State 47

	FOLExpr -> 'Exists' id '(' Prop . ')'               (rule 9)

	')'            shift, and enter state 62


State 48

	FOLExpr -> 'ForAll' id '(' Prop . ')'               (rule 8)

	')'            shift, and enter state 61


State 49

	Exp -> '(' Exp . ')'                                (rule 16)

	')'            shift, and enter state 60


State 50

	Exp -> 'Mult' '(' . Exp ')' '(' Exp ')'             (rule 15)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 59

State 51

	Exp -> 'Plus' '(' . Exp ')' '(' Exp ')'             (rule 14)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 58

State 52

	Exp -> 'S' Exp .                                    (rule 12)

	')'            reduce using rule 12


State 53

	Exp -> 'S' '(' . Exp ')'                            (rule 13)
	Exp -> '(' . Exp ')'                                (rule 16)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 57

State 54

	Exp -> 'Var' id .                                   (rule 10)

	')'            reduce using rule 10


State 55

	FOLExpr -> 'Eq' '(' Exp ')' . '(' Exp ')'           (rule 7)

	'('            shift, and enter state 56


State 56

	FOLExpr -> 'Eq' '(' Exp ')' '(' . Exp ')'           (rule 7)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 69

State 57

	Exp -> 'S' '(' Exp . ')'                            (rule 13)
	Exp -> '(' Exp . ')'                                (rule 16)

	')'            shift, and enter state 68


State 58

	Exp -> 'Plus' '(' Exp . ')' '(' Exp ')'             (rule 14)

	')'            shift, and enter state 67


State 59

	Exp -> 'Mult' '(' Exp . ')' '(' Exp ')'             (rule 15)

	')'            shift, and enter state 66


State 60

	Exp -> '(' Exp ')' .                                (rule 16)

	')'            reduce using rule 16


State 61

	FOLExpr -> 'ForAll' id '(' Prop ')' .               (rule 8)

	')'            reduce using rule 8


State 62

	FOLExpr -> 'Exists' id '(' Prop ')' .               (rule 9)

	')'            reduce using rule 9


State 63

	Prop -> 'And' '(' Prop ')' '(' Prop ')' .           (rule 3)

	')'            reduce using rule 3
	%eof           reduce using rule 3


State 64

	Prop -> 'Or' '(' Prop ')' '(' Prop ')' .            (rule 4)

	')'            reduce using rule 4
	%eof           reduce using rule 4


State 65

	Prop -> 'Imp' '(' Prop ')' '(' Prop ')' .           (rule 5)

	')'            reduce using rule 5
	%eof           reduce using rule 5


State 66

	Exp -> 'Mult' '(' Exp ')' . '(' Exp ')'             (rule 15)

	'('            shift, and enter state 72


State 67

	Exp -> 'Plus' '(' Exp ')' . '(' Exp ')'             (rule 14)

	'('            shift, and enter state 71


State 68

	Exp -> 'S' '(' Exp ')' .                            (rule 13)
	Exp -> '(' Exp ')' .                                (rule 16)

	')'            reduce using rule 16
			(reduce using rule 13)



State 69

	FOLExpr -> 'Eq' '(' Exp ')' '(' Exp . ')'           (rule 7)

	')'            shift, and enter state 70


State 70

	FOLExpr -> 'Eq' '(' Exp ')' '(' Exp ')' .           (rule 7)

	')'            reduce using rule 7


State 71

	Exp -> 'Plus' '(' Exp ')' '(' . Exp ')'             (rule 14)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 74

State 72

	Exp -> 'Mult' '(' Exp ')' '(' . Exp ')'             (rule 15)

	'Var'          shift, and enter state 33
	'Z'            shift, and enter state 34
	'S'            shift, and enter state 35
	'Plus'         shift, and enter state 36
	'Mult'         shift, and enter state 37
	'('            shift, and enter state 38

	Exp            goto state 73

State 73

	Exp -> 'Mult' '(' Exp ')' '(' Exp . ')'             (rule 15)

	')'            shift, and enter state 76


State 74

	Exp -> 'Plus' '(' Exp ')' '(' Exp . ')'             (rule 14)

	')'            shift, and enter state 75


State 75

	Exp -> 'Plus' '(' Exp ')' '(' Exp ')' .             (rule 14)

	')'            reduce using rule 14


State 76

	Exp -> 'Mult' '(' Exp ')' '(' Exp ')' .             (rule 15)

	')'            reduce using rule 15


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 17
Number of terminals: 16
Number of non-terminals: 4
Number of states: 77
